# SimAnMo

./: .cproject  .project  CMakeLists.txt  LICENSE  Makefile  README.MD  SimulatedAnnealingExtraP.sln
SimAnMoDriver/: CMakeLists.txt  SimAnMoDriver.vcxproj  main.cpp
SimAnMoTest/: CMakeLists.txt  LibraryTest.vcxproj  main.cpp
SimulatedAnnealingExtraP/: AbstractSolution.h  AlglibLinearRegressionFinder.cpp  AlglibLinearRegressionFinder.h  CMakeLists.txt  Configurator.h  CostCalculator.cpp  CostCalculator.h  EigenParameterEstimator.cpp  EigenParameterEstimator.h  ExponentialPolynomSolution.cpp  ExponentialPolynomSolution.h  ExponentialSolution.cpp  ExponentialSolution.h  ExtraPSolution.cpp  ExtraPSolution.h  FactorialSolution.cpp  FactorialSolution.h  GeneralParameterEstimator.cpp  GeneralParameterEstimator.h  InMaps.h  LatexPrinter.cpp  LatexPrinter.h  LibraryInterface.cpp  LibraryInterface.h  LibraryInterface.h.in  LinearRegressionFinder.cpp  LinearRegressionFinder.h  LinearSolution.cpp  LinearSolution.h  MeasurementDB.cpp  MeasurementDB.h  MeasurementDBReader.cpp  MeasurementDBReader.h  ParameterEstimator.cpp  ParameterEstimator.h  ParameterEstimatorInterface.h  QualityLogger.cpp  QualityLogger.h  R2CostCalculator.cpp  R2CostCalculator.h  (+32 more)
SimulatedAnnealingExtraP/FADBAD++/test/MSCPPNET/: MSCPPNET8.00.sln  MSCPPNET8.00.vcxproj  MSCPPNET8.00.vcxproj.filters  UpgradeLog.htm
SimulatedAnnealingExtraP/FADBAD++/test/MSCPPNET/Debug/MSCPPNET.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MSCPPNET.lastbuildstate
SimulatedAnnealingExtraP/FADBAD++/test/MSCPPNET/Release/: MSCPPNET.exe.metagen  MSCPPNET.exe.recipe  MSCPPNET8.00.vcxproj.FileListAbsolute.txt
SimulatedAnnealingExtraP/FADBAD++/test/MSCPPNET/Release/MSCPPNET.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MSCPPNET.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SimulatedAnnealingExtraP/alglib/: CMakeLists.txt  alglibinternal.cpp  alglibmisc.cpp  ap.cpp  dataanalysis.cpp  diffequations.cpp  fasttransforms.cpp  integration.cpp  interpolation.cpp  linalg.cpp  optimization.cpp  solvers.cpp  specialfunctions.cpp  statistics.cpp
additional-material-reproducibility/G6KSieve/: G6kPrediction.xlsx  d80_130_varSeed.txt  g6k_script_varNumthreads.sh  g6k_script_varSeed.sh
additional-material-reproducibility/SnytheticBenchmarks/: ExpontialRuntimeTester.sln  README.md
additional-material-reproducibility/SubSieve/: SubSieveDim70-90.xlsx  subsieve-94-0-1.txt  subsieve-94-0-2.txt  subsieve-94-0-3.txt  subsieve-94-0-4.txt  subsieve-94-0-5.txt  subsieve-96-0-1.txt  subsieve-96-0-10.txt  (+16 more)
inputs/: 2021newsynth01.txt  20221newsynth01.txt  Dax.txt  ENUMTheorie.txt  FacSynth2.txt  FacSynth3.txt  MMMPar12TBoost.txt  NTLRRExpo-Dim88.txt  NTLRRdelta.txt  PractSynth01.txt  PractSynth02.txt  PractSynth03.txt  PractSynthARM.txt  StringPermutation.txt  StringPermutationPi.txt  StringPermutations2.txt  SubSieveRobust.txt  SubSieveTime.txt  TSPPar.txt  TSPSerWOEarlyLB2.txt  ajtai200.txt  aonoRobust.txt  aonolin.txt  breakRSA.txt  enumtheory.txt  factorial.txt  fplll1.00.txt  fplll1.50.txt  fplll1.75.txt  fplll2.00.txt  fplll2.25.txt  fplll2.40.txt  g6k.txt  g6kMixedSeeds.txt  g6kRobust.txt  g6kdim80-130.txt  g6ksieve.txt  g6kvardim.txt  hashsieve.txt  hashsieveRobust.txt  (+20 more)
outputs/: PractSynt01.tex  PractSynt02.tex  PractSynt04.tex  PractSynth01Exp.tex  PractSynth02Exp.tex  PractSynthARMExp.tex  PractSynthARMFull.tex  PractSynthARMLinear.tex  enumtheory.tex  hashsieve.tex
scripts/: generate_paper_plots.bat  generate_paper_plots_linux.sh  generate_paper_plots_windows.bat
(+116 files in other folders)
